<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


  <modelVersion>4.0.0</modelVersion>
  <description>Zoxweb public utilities jar</description>
  <url>http://www.zoxweb.com</url>
  <name>zoxweb-core</name>
  <groupId>org.zoxweb</groupId>
  <artifactId>zoxweb-core</artifactId>
  <version>2.3.3</version>
  <packaging>jar</packaging>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>


  <scm>
    <url>https://github.com/fidusio/zoxweb-core.git</url>
    <connection>scm:git:git://github.com/fidusio/zoxweb-core.git</connection>
    <developerConnection>scm:git:git://github.com/fidusio/zoxweb-core.git</developerConnection>
  </scm>


  <developers>
    <developer>
      <id>javaconsigliere</id>
      <name>Java Consigliere</name>
      <email>javaconsigliere@gmail.com</email>
      <url>http://zoxweb.com</url>
      <organization>ZoxWeb.com</organization>
      <organizationUrl>http://www.zoxweb.com</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>America/Los_Angeles</timezone>
    </developer>
  </developers>


  <!-- Version definition -->
  <properties>
    <skipTests>true</skipTests>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.version>1.8</jdk.version>
    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
    <maven-plugin-source.version>3.2.1</maven-plugin-source.version>
    <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
    <maven-surefile-plugin.version>3.0.0-M7</maven-surefile-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <maven-javadoc.version>3.4.1</maven-javadoc.version>
    <exec-maven.version>3.1.0</exec-maven.version>


    <gson.version>2.10</gson.version>
    <javax-cache.version>1.1.1</javax-cache.version>
    <!--<javax-mail.version>1.6.7</javax-mail.version> -->
    <jakarta-mail.version>2.0.1</jakarta-mail.version>
    <jsoup.version>1.15.3</jsoup.version>
    <snakeyaml.version>1.33</snakeyaml.version>
    <junit.version>5.9.0</junit.version>


  </properties>

  <build>
    <directory>target</directory>
   
    <resources>
      <resource>
        <directory>src/main/java/</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven.version}</version>
        <configuration>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefile-plugin.version}</version>
        <configuration>
          <skipTests>${skipTests}</skipTests>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven-resources-plugin.version}</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-plugin-source.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven-jar-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc.version}</version>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>


    </plugins>

  </build>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>${jsoup.version}</version>
      <scope>provided</scope>
    </dependency>





    <!--
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>jakarta.mail</artifactId>
      <version>${javax-mail.version}</version>
      <scope>provided</scope>
    </dependency>
    -->
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>jakarta.mail</artifactId>
      <version>${jakarta-mail.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>javax.cache</groupId>
      <artifactId>cache-api</artifactId>
      <version>${javax-cache.version}</version>
      <scope>provided</scope>
    </dependency>

	<dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
      <scope>provided</scope>
	</dependency>

  </dependencies>

</project>